fixing exhibition alignment

--- a/src/css/pages/_exhibitions.scss
+++ b/src/css/pages/_exhibitions.scss
@@ -20,7 +20,7 @@
 .exhibition-year {
     padding-bottom: 15px;
     font-size: 16px;
-    width:90px;
+    width: 85px;
 }
 
 .exhibition-name {
@@ -34,4 +34,11 @@
 
 .exhibition-dates {
     font-size: 16px;
+}
+
+@media screen and (max-width: 500px) {
+    .exhibition-container {
+        max-width: 241px;
+
+    }
 }
